--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,7 @@ HW4/PIVimages
 HW4/ETPoF_23_HW4.pdf
 HW4/LDA-signal.csv
 
-.conda
-.vscode
+.conda/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
