Added PyCharm IDE settings

--- a/.gitignore
+++ b/.gitignore
@@ -175,3 +175,410 @@ cython_debug/
 ETPoF.code-workspace
 .DS_Store
 !/HW3/PTV/
+/.idea/copilot/chatSessions/00000000000.xd
+/HW3/PTV/a1.png
+/HW3/PTV/a2.png
+/HW3/PTV/a3.png
+/HW3/PTV/a4.png
+/HW3/PTV/a5.png
+/HW3/PTV/a6.png
+/HW3/PTV/a7.png
+/HW3/PTV/a8.png
+/HW3/PTV/a9.png
+/HW3/PTV/a10.png
+/HW3/PTV/a11.png
+/HW3/PTV/a12.png
+/HW3/PTV/a13.png
+/HW3/PTV/a14.png
+/HW3/PTV/a15.png
+/HW3/PTV/a16.png
+/HW3/PTV/a17.png
+/HW3/PTV/a18.png
+/HW3/PTV/a19.png
+/HW3/PTV/a20.png
+/HW3/PTV/a21.png
+/HW3/PTV/a22.png
+/HW3/PTV/a23.png
+/HW3/PTV/a24.png
+/HW3/PTV/a25.png
+/HW3/PTV/a26.png
+/HW3/PTV/a27.png
+/HW3/PTV/a28.png
+/HW3/PTV/a29.png
+/HW3/PTV/a30.png
+/HW3/PTV/a31.png
+/HW3/PTV/a32.png
+/HW3/PTV/a33.png
+/HW3/PTV/a34.png
+/HW3/PTV/a35.png
+/HW3/PTV/a36.png
+/HW3/PTV/a37.png
+/HW3/PTV/a38.png
+/HW3/PTV/a39.png
+/HW3/PTV/a40.png
+/HW3/PTV/a41.png
+/HW3/PTV/a42.png
+/HW3/PTV/a43.png
+/HW3/PTV/a44.png
+/HW3/PTV/a45.png
+/HW3/PTV/a46.png
+/HW3/PTV/a47.png
+/HW3/PTV/a48.png
+/HW3/PTV/a49.png
+/HW3/PTV/a50.png
+/HW3/PTV/a51.png
+/HW3/PTV/a52.png
+/HW3/PTV/a53.png
+/HW3/PTV/a54.png
+/HW3/PTV/a55.png
+/HW3/PTV/a56.png
+/HW3/PTV/a57.png
+/HW3/PTV/a58.png
+/HW3/PTV/a59.png
+/HW3/PTV/a60.png
+/HW3/PTV/a61.png
+/HW3/PTV/a62.png
+/HW3/PTV/a63.png
+/HW3/PTV/a64.png
+/HW3/PTV/a65.png
+/HW3/PTV/a66.png
+/HW3/PTV/a67.png
+/HW3/PTV/a68.png
+/HW3/PTV/a69.png
+/HW3/PTV/a70.png
+/HW3/PTV/a71.png
+/HW3/PTV/a72.png
+/HW3/PTV/a73.png
+/HW3/PTV/a74.png
+/HW3/PTV/a75.png
+/HW3/PTV/a76.png
+/HW3/PTV/a77.png
+/HW3/PTV/a78.png
+/HW3/PTV/a79.png
+/HW3/PTV/a80.png
+/HW3/PTV/a81.png
+/HW3/PTV/a82.png
+/HW3/PTV/a83.png
+/HW3/PTV/a84.png
+/HW3/PTV/a85.png
+/HW3/PTV/a86.png
+/HW3/PTV/a87.png
+/HW3/PTV/a88.png
+/HW3/PTV/a89.png
+/HW3/PTV/a90.png
+/HW3/PTV/a91.png
+/HW3/PTV/a92.png
+/HW3/PTV/a93.png
+/HW3/PTV/a94.png
+/HW3/PTV/a95.png
+/HW3/PTV/a96.png
+/HW3/PTV/a97.png
+/HW3/PTV/a98.png
+/HW3/PTV/a99.png
+/HW3/PTV/a100.png
+/HW3/PTV/a101.png
+/HW3/PTV/a102.png
+/HW3/PTV/a103.png
+/HW3/PTV/a104.png
+/HW3/PTV/a105.png
+/HW3/PTV/a106.png
+/HW3/PTV/a107.png
+/HW3/PTV/a108.png
+/HW3/PTV/a109.png
+/HW3/PTV/a110.png
+/HW3/PTV/a111.png
+/HW3/PTV/a112.png
+/HW3/PTV/a113.png
+/HW3/PTV/a114.png
+/HW3/PTV/a115.png
+/HW3/PTV/a116.png
+/HW3/PTV/a117.png
+/HW3/PTV/a118.png
+/HW3/PTV/a119.png
+/HW3/PTV/a120.png
+/HW3/PTV/a121.png
+/HW3/PTV/a122.png
+/HW3/PTV/a123.png
+/HW3/PTV/a124.png
+/HW3/PTV/a125.png
+/HW3/PTV/a126.png
+/HW3/PTV/a127.png
+/HW3/PTV/a128.png
+/HW3/PTV/a129.png
+/HW3/PTV/a130.png
+/HW3/PTV/a131.png
+/HW3/PTV/a132.png
+/HW3/PTV/a133.png
+/HW3/PTV/a134.png
+/HW3/PTV/a135.png
+/HW3/PTV/a136.png
+/HW3/PTV/a137.png
+/HW3/PTV/a138.png
+/HW3/PTV/a139.png
+/HW3/PTV/a140.png
+/HW3/PTV/a141.png
+/HW3/PTV/a142.png
+/HW3/PTV/a143.png
+/HW3/PTV/a144.png
+/HW3/PTV/a145.png
+/HW3/PTV/a146.png
+/HW3/PTV/a147.png
+/HW3/PTV/a148.png
+/HW3/PTV/a149.png
+/HW3/PTV/a150.png
+/HW3/PTV/a151.png
+/HW3/PTV/a152.png
+/HW3/PTV/a153.png
+/HW3/PTV/a154.png
+/HW3/PTV/a155.png
+/HW3/PTV/a156.png
+/HW3/PTV/a157.png
+/HW3/PTV/a158.png
+/HW3/PTV/a159.png
+/HW3/PTV/a160.png
+/HW3/PTV/a161.png
+/HW3/PTV/a162.png
+/HW3/PTV/a163.png
+/HW3/PTV/a164.png
+/HW3/PTV/a165.png
+/HW3/PTV/a166.png
+/HW3/PTV/a167.png
+/HW3/PTV/a168.png
+/HW3/PTV/a169.png
+/HW3/PTV/a170.png
+/HW3/PTV/a171.png
+/HW3/PTV/a172.png
+/HW3/PTV/a173.png
+/HW3/PTV/a174.png
+/HW3/PTV/a175.png
+/HW3/PTV/a176.png
+/HW3/PTV/a177.png
+/HW3/PTV/a178.png
+/HW3/PTV/a179.png
+/HW3/PTV/a180.png
+/HW3/PTV/a181.png
+/HW3/PTV/a182.png
+/HW3/PTV/a183.png
+/HW3/PTV/a184.png
+/HW3/PTV/a185.png
+/HW3/PTV/a186.png
+/HW3/PTV/a187.png
+/HW3/PTV/a188.png
+/HW3/PTV/a189.png
+/HW3/PTV/a190.png
+/HW3/PTV/a191.png
+/HW3/PTV/a192.png
+/HW3/PTV/a193.png
+/HW3/PTV/a194.png
+/HW3/PTV/a195.png
+/HW3/PTV/a196.png
+/HW3/PTV/a197.png
+/HW3/PTV/a198.png
+/HW3/PTV/a199.png
+/HW3/PTV/a200.png
+/HW3/PTV/b1.png
+/HW3/PTV/b2.png
+/HW3/PTV/b3.png
+/HW3/PTV/b4.png
+/HW3/PTV/b5.png
+/HW3/PTV/b6.png
+/HW3/PTV/b7.png
+/HW3/PTV/b8.png
+/HW3/PTV/b9.png
+/HW3/PTV/b10.png
+/HW3/PTV/b11.png
+/HW3/PTV/b12.png
+/HW3/PTV/b13.png
+/HW3/PTV/b14.png
+/HW3/PTV/b15.png
+/HW3/PTV/b16.png
+/HW3/PTV/b17.png
+/HW3/PTV/b18.png
+/HW3/PTV/b19.png
+/HW3/PTV/b20.png
+/HW3/PTV/b21.png
+/HW3/PTV/b22.png
+/HW3/PTV/b23.png
+/HW3/PTV/b24.png
+/HW3/PTV/b25.png
+/HW3/PTV/b26.png
+/HW3/PTV/b27.png
+/HW3/PTV/b28.png
+/HW3/PTV/b29.png
+/HW3/PTV/b30.png
+/HW3/PTV/b31.png
+/HW3/PTV/b32.png
+/HW3/PTV/b33.png
+/HW3/PTV/b34.png
+/HW3/PTV/b35.png
+/HW3/PTV/b36.png
+/HW3/PTV/b37.png
+/HW3/PTV/b38.png
+/HW3/PTV/b39.png
+/HW3/PTV/b40.png
+/HW3/PTV/b41.png
+/HW3/PTV/b42.png
+/HW3/PTV/b43.png
+/HW3/PTV/b44.png
+/HW3/PTV/b45.png
+/HW3/PTV/b46.png
+/HW3/PTV/b47.png
+/HW3/PTV/b48.png
+/HW3/PTV/b49.png
+/HW3/PTV/b50.png
+/HW3/PTV/b51.png
+/HW3/PTV/b52.png
+/HW3/PTV/b53.png
+/HW3/PTV/b54.png
+/HW3/PTV/b55.png
+/HW3/PTV/b56.png
+/HW3/PTV/b57.png
+/HW3/PTV/b58.png
+/HW3/PTV/b59.png
+/HW3/PTV/b60.png
+/HW3/PTV/b61.png
+/HW3/PTV/b62.png
+/HW3/PTV/b63.png
+/HW3/PTV/b64.png
+/HW3/PTV/b65.png
+/HW3/PTV/b66.png
+/HW3/PTV/b67.png
+/HW3/PTV/b68.png
+/HW3/PTV/b69.png
+/HW3/PTV/b70.png
+/HW3/PTV/b71.png
+/HW3/PTV/b72.png
+/HW3/PTV/b73.png
+/HW3/PTV/b74.png
+/HW3/PTV/b75.png
+/HW3/PTV/b76.png
+/HW3/PTV/b77.png
+/HW3/PTV/b78.png
+/HW3/PTV/b79.png
+/HW3/PTV/b80.png
+/HW3/PTV/b81.png
+/HW3/PTV/b82.png
+/HW3/PTV/b83.png
+/HW3/PTV/b84.png
+/HW3/PTV/b85.png
+/HW3/PTV/b86.png
+/HW3/PTV/b87.png
+/HW3/PTV/b88.png
+/HW3/PTV/b89.png
+/HW3/PTV/b90.png
+/HW3/PTV/b91.png
+/HW3/PTV/b92.png
+/HW3/PTV/b93.png
+/HW3/PTV/b94.png
+/HW3/PTV/b95.png
+/HW3/PTV/b96.png
+/HW3/PTV/b97.png
+/HW3/PTV/b98.png
+/HW3/PTV/b99.png
+/HW3/PTV/b100.png
+/HW3/PTV/b101.png
+/HW3/PTV/b102.png
+/HW3/PTV/b103.png
+/HW3/PTV/b104.png
+/HW3/PTV/b105.png
+/HW3/PTV/b106.png
+/HW3/PTV/b107.png
+/HW3/PTV/b108.png
+/HW3/PTV/b109.png
+/HW3/PTV/b110.png
+/HW3/PTV/b111.png
+/HW3/PTV/b112.png
+/HW3/PTV/b113.png
+/HW3/PTV/b114.png
+/HW3/PTV/b115.png
+/HW3/PTV/b116.png
+/HW3/PTV/b117.png
+/HW3/PTV/b118.png
+/HW3/PTV/b119.png
+/HW3/PTV/b120.png
+/HW3/PTV/b121.png
+/HW3/PTV/b122.png
+/HW3/PTV/b123.png
+/HW3/PTV/b124.png
+/HW3/PTV/b125.png
+/HW3/PTV/b126.png
+/HW3/PTV/b127.png
+/HW3/PTV/b128.png
+/HW3/PTV/b129.png
+/HW3/PTV/b130.png
+/HW3/PTV/b131.png
+/HW3/PTV/b132.png
+/HW3/PTV/b133.png
+/HW3/PTV/b134.png
+/HW3/PTV/b135.png
+/HW3/PTV/b136.png
+/HW3/PTV/b137.png
+/HW3/PTV/b138.png
+/HW3/PTV/b139.png
+/HW3/PTV/b140.png
+/HW3/PTV/b141.png
+/HW3/PTV/b142.png
+/HW3/PTV/b143.png
+/HW3/PTV/b144.png
+/HW3/PTV/b145.png
+/HW3/PTV/b146.png
+/HW3/PTV/b147.png
+/HW3/PTV/b148.png
+/HW3/PTV/b149.png
+/HW3/PTV/b150.png
+/HW3/PTV/b151.png
+/HW3/PTV/b152.png
+/HW3/PTV/b153.png
+/HW3/PTV/b154.png
+/HW3/PTV/b155.png
+/HW3/PTV/b156.png
+/HW3/PTV/b157.png
+/HW3/PTV/b158.png
+/HW3/PTV/b159.png
+/HW3/PTV/b160.png
+/HW3/PTV/b161.png
+/HW3/PTV/b162.png
+/HW3/PTV/b163.png
+/HW3/PTV/b164.png
+/HW3/PTV/b165.png
+/HW3/PTV/b166.png
+/HW3/PTV/b167.png
+/HW3/PTV/b168.png
+/HW3/PTV/b169.png
+/HW3/PTV/b170.png
+/HW3/PTV/b171.png
+/HW3/PTV/b172.png
+/HW3/PTV/b173.png
+/HW3/PTV/b174.png
+/HW3/PTV/b175.png
+/HW3/PTV/b176.png
+/HW3/PTV/b177.png
+/HW3/PTV/b178.png
+/HW3/PTV/b179.png
+/HW3/PTV/b180.png
+/HW3/PTV/b181.png
+/HW3/PTV/b182.png
+/HW3/PTV/b183.png
+/HW3/PTV/b184.png
+/HW3/PTV/b185.png
+/HW3/PTV/b186.png
+/HW3/PTV/b187.png
+/HW3/PTV/b188.png
+/HW3/PTV/b189.png
+/HW3/PTV/b190.png
+/HW3/PTV/b191.png
+/HW3/PTV/b192.png
+/HW3/PTV/b193.png
+/HW3/PTV/b194.png
+/HW3/PTV/b195.png
+/HW3/PTV/b196.png
+/HW3/PTV/b197.png
+/HW3/PTV/b198.png
+/HW3/PTV/b199.png
+/HW3/PTV/b200.png
+/HW3/PTV/Calibration_a.png
+/HW3/PTV/Calibration_b.png
+/.idea/copilot/chatSessions/blobs/version
+/.idea/workspace.xml
+/.idea/copilot/chatSessions/xd.lck
+
