Added functions file for assignment a2

--- a/.gitignore
+++ b/.gitignore
@@ -583,3 +583,5 @@ ETPoF.code-workspace
 /.idea/copilot/chatSessions/blobs/version
 /.idea/workspace.xml
 /.idea/copilot/chatSessions/xd.lck
+/.idea/codeStyles/codeStyleConfig.xml
+/.idea/inspectionProfiles/profiles_settings.xml
