--- a/.gitignore
+++ b/.gitignore
@@ -585,3 +585,4 @@ ETPoF.code-workspace
 /.idea/copilot/chatSessions/xd.lck
 /.idea/codeStyles/codeStyleConfig.xml
 /.idea/inspectionProfiles/profiles_settings.xml
+/.idea/ETPoF.iml
