Final assignment data + cleanup

--- a/.gitignore
+++ b/.gitignore
@@ -586,3 +586,8 @@ ETPoF.code-workspace
 /.idea/codeStyles/codeStyleConfig.xml
 /.idea/inspectionProfiles/profiles_settings.xml
 /.idea/ETPoF.iml
+/.idea/shelf/Uncommitted_changes_before_Update_at_05_04_2024,_13_08_[Changes]/shelved.patch
+/.idea/shelf/Uncommitted_changes_before_Update_at_05_04_2024__13_08__Changes_.xml
+/.idea/shelf/Uncommitted_changes_before_Update_at_05_04_2024,_13_08_[Changes]/shelved.patch
+
+/PIV data/
