--- a/.gitignore
+++ b/.gitignore
@@ -591,3 +591,4 @@ ETPoF.code-workspace
 /.idea/shelf/Uncommitted_changes_before_Update_at_05_04_2024,_13_08_[Changes]/shelved.patch
 
 /PIV data/
+/data/
