--- a/.gitignore
+++ b/.gitignore
@@ -216,3 +216,7 @@ cython_debug/
 /.idea/inspectionProfiles/profiles_settings.xml
 /.idea/vcs.xml
 /.idea/workspace.xml
+
+/processed/video/frames_flow/
+/processed/video/frames_flow_png/
+/processed/video/frames_velocity/
